Fixed multiple tags and added extra margin

--- a/src/app/feature/components/product/product.component.less
+++ b/src/app/feature/components/product/product.component.less
@@ -165,7 +165,7 @@
       position: absolute;
       color: @product-price;
       top: 10px;
-      margin: 0 10px;
+      margin: 0 15px;
       font-size: 20px;
     }
     .wishlist-icon {
@@ -244,13 +244,11 @@
   }
 }
 .condition-icon{
-  position: absolute;
-  top: 10px;
-  left: 0;
+  position: relative;
   font-size: 14px;
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
   border-radius: 5px;
-  margin: 0 10px;
+  margin: 0 0 0 10px;
   padding: 3px;
   color: #B76E79;
   background-color: #f2f4f3;
